// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TimezonePicker renders correctly with default props 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Timezone",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "readOnly": true,
                    "style": {
                      "color": "#1C1C1C",
                    },
                    "testID": "text_input",
                    "value": "Please select an option.",
                  },
                  "type": "TextInput",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "pointerEvents": "none",
                    },
                    "testID": "icon_container",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "pointerEvents": "box-only",
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "activeOpacity": 1,
            "onPress": [Function],
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 40,
              "width": "95%",
            },
            "testID": "ios_touchable_wrapper",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "aria-role": "button",
                "onPress": [Function],
                "style": {
                  "flex": 1,
                },
                "testID": "ios_modal_top",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flexDirection": "row",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "Done",
                          ],
                          "props": {
                            "allowFontScaling": false,
                            "style": [
                              {
                                "color": "#007aff",
                                "fontSize": 17,
                                "fontWeight": "600",
                                "paddingRight": 11,
                                "paddingTop": 1,
                              },
                              {},
                            ],
                            "testID": "done_text",
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {
                        "style": undefined,
                        "testID": "needed_for_touchable",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "hitSlop": {
                      "bottom": 4,
                      "left": 4,
                      "right": 4,
                      "top": 4,
                    },
                    "onPress": [Function],
                    "onPressIn": [Function],
                    "onPressOut": [Function],
                    "testID": "done_button",
                  },
                  "type": "Pressable",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#f8f8f8",
                  "borderTopColor": "#dedede",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "height": 45,
                  "justifyContent": "space-between",
                  "paddingHorizontal": 10,
                  "zIndex": 2,
                },
                "testID": "input_accessory_view",
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Please select an option.",
                        "value": "",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Eastern",
                        "value": "America/New_York",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Central",
                        "value": "America/Chicago",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Mountain",
                        "value": "America/Denver",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Pacific",
                        "value": "America/Los_Angeles",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Alaska",
                        "value": "America/Anchorage",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Hawaii",
                        "value": "Pacific/Honolulu",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Arizona",
                        "value": "America/Phoenix",
                      },
                      "type": "Picker.Item",
                    },
                  ],
                  "props": {
                    "onValueChange": [Function],
                    "selectedValue": "",
                    "testID": "ios_picker",
                  },
                  "type": "Picker",
                },
              ],
              "props": {
                "style": [
                  {
                    "backgroundColor": "#d0d4da",
                    "justifyContent": "center",
                  },
                  {
                    "height": 215,
                  },
                ],
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "animationType": undefined,
            "onOrientationChange": [Function],
            "supportedOrientations": [
              "portrait",
              "landscape",
            ],
            "testID": "ios_modal",
            "transparent": true,
            "visible": false,
          },
          "type": "Modal",
        },
      ],
      "props": {
        "style": [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 40,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#9A9A9A",
          },
          false,
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TimezonePicker hides title when hideTitle is true 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "readOnly": true,
                    "style": {
                      "color": "#1C1C1C",
                    },
                    "testID": "text_input",
                    "value": "Please select an option.",
                  },
                  "type": "TextInput",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "pointerEvents": "none",
                    },
                    "testID": "icon_container",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "pointerEvents": "box-only",
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "activeOpacity": 1,
            "onPress": [Function],
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 40,
              "width": "95%",
            },
            "testID": "ios_touchable_wrapper",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "aria-role": "button",
                "onPress": [Function],
                "style": {
                  "flex": 1,
                },
                "testID": "ios_modal_top",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flexDirection": "row",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "Done",
                          ],
                          "props": {
                            "allowFontScaling": false,
                            "style": [
                              {
                                "color": "#007aff",
                                "fontSize": 17,
                                "fontWeight": "600",
                                "paddingRight": 11,
                                "paddingTop": 1,
                              },
                              {},
                            ],
                            "testID": "done_text",
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {
                        "style": undefined,
                        "testID": "needed_for_touchable",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "hitSlop": {
                      "bottom": 4,
                      "left": 4,
                      "right": 4,
                      "top": 4,
                    },
                    "onPress": [Function],
                    "onPressIn": [Function],
                    "onPressOut": [Function],
                    "testID": "done_button",
                  },
                  "type": "Pressable",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#f8f8f8",
                  "borderTopColor": "#dedede",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "height": 45,
                  "justifyContent": "space-between",
                  "paddingHorizontal": 10,
                  "zIndex": 2,
                },
                "testID": "input_accessory_view",
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Please select an option.",
                        "value": "",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Eastern",
                        "value": "America/New_York",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Central",
                        "value": "America/Chicago",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Mountain",
                        "value": "America/Denver",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Pacific",
                        "value": "America/Los_Angeles",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Alaska",
                        "value": "America/Anchorage",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Hawaii",
                        "value": "Pacific/Honolulu",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Arizona",
                        "value": "America/Phoenix",
                      },
                      "type": "Picker.Item",
                    },
                  ],
                  "props": {
                    "onValueChange": [Function],
                    "selectedValue": "",
                    "testID": "ios_picker",
                  },
                  "type": "Picker",
                },
              ],
              "props": {
                "style": [
                  {
                    "backgroundColor": "#d0d4da",
                    "justifyContent": "center",
                  },
                  {
                    "height": 215,
                  },
                ],
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "animationType": undefined,
            "onOrientationChange": [Function],
            "supportedOrientations": [
              "portrait",
              "landscape",
            ],
            "testID": "ios_modal",
            "transparent": true,
            "visible": false,
          },
          "type": "Modal",
        },
      ],
      "props": {
        "style": [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 40,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#9A9A9A",
          },
          false,
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TimezonePicker renders with selected timezone 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Timezone",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "readOnly": true,
                    "style": {
                      "color": "#1C1C1C",
                    },
                    "testID": "text_input",
                    "value": "Eastern",
                  },
                  "type": "TextInput",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "pointerEvents": "none",
                    },
                    "testID": "icon_container",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "pointerEvents": "box-only",
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "activeOpacity": 1,
            "onPress": [Function],
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 40,
              "width": "95%",
            },
            "testID": "ios_touchable_wrapper",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "aria-role": "button",
                "onPress": [Function],
                "style": {
                  "flex": 1,
                },
                "testID": "ios_modal_top",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flexDirection": "row",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "Done",
                          ],
                          "props": {
                            "allowFontScaling": false,
                            "style": [
                              {
                                "color": "#007aff",
                                "fontSize": 17,
                                "fontWeight": "600",
                                "paddingRight": 11,
                                "paddingTop": 1,
                              },
                              {},
                            ],
                            "testID": "done_text",
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {
                        "style": undefined,
                        "testID": "needed_for_touchable",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "hitSlop": {
                      "bottom": 4,
                      "left": 4,
                      "right": 4,
                      "top": 4,
                    },
                    "onPress": [Function],
                    "onPressIn": [Function],
                    "onPressOut": [Function],
                    "testID": "done_button",
                  },
                  "type": "Pressable",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#f8f8f8",
                  "borderTopColor": "#dedede",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "height": 45,
                  "justifyContent": "space-between",
                  "paddingHorizontal": 10,
                  "zIndex": 2,
                },
                "testID": "input_accessory_view",
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Please select an option.",
                        "value": "",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Eastern",
                        "value": "America/New_York",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Central",
                        "value": "America/Chicago",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Mountain",
                        "value": "America/Denver",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Pacific",
                        "value": "America/Los_Angeles",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Alaska",
                        "value": "America/Anchorage",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Hawaii",
                        "value": "Pacific/Honolulu",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Arizona",
                        "value": "America/Phoenix",
                      },
                      "type": "Picker.Item",
                    },
                  ],
                  "props": {
                    "onValueChange": [Function],
                    "selectedValue": "America/New_York",
                    "testID": "ios_picker",
                  },
                  "type": "Picker",
                },
              ],
              "props": {
                "style": [
                  {
                    "backgroundColor": "#d0d4da",
                    "justifyContent": "center",
                  },
                  {
                    "height": 215,
                  },
                ],
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "animationType": undefined,
            "onOrientationChange": [Function],
            "supportedOrientations": [
              "portrait",
              "landscape",
            ],
            "testID": "ios_modal",
            "transparent": true,
            "visible": false,
          },
          "type": "Modal",
        },
      ],
      "props": {
        "style": [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 40,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#9A9A9A",
          },
          false,
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TimezonePicker renders USA timezones by default 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Timezone",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "readOnly": true,
                    "style": {
                      "color": "#1C1C1C",
                    },
                    "testID": "text_input",
                    "value": "Eastern",
                  },
                  "type": "TextInput",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "pointerEvents": "none",
                    },
                    "testID": "icon_container",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "pointerEvents": "box-only",
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "activeOpacity": 1,
            "onPress": [Function],
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 40,
              "width": "95%",
            },
            "testID": "ios_touchable_wrapper",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "aria-role": "button",
                "onPress": [Function],
                "style": {
                  "flex": 1,
                },
                "testID": "ios_modal_top",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flexDirection": "row",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "Done",
                          ],
                          "props": {
                            "allowFontScaling": false,
                            "style": [
                              {
                                "color": "#007aff",
                                "fontSize": 17,
                                "fontWeight": "600",
                                "paddingRight": 11,
                                "paddingTop": 1,
                              },
                              {},
                            ],
                            "testID": "done_text",
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {
                        "style": undefined,
                        "testID": "needed_for_touchable",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "hitSlop": {
                      "bottom": 4,
                      "left": 4,
                      "right": 4,
                      "top": 4,
                    },
                    "onPress": [Function],
                    "onPressIn": [Function],
                    "onPressOut": [Function],
                    "testID": "done_button",
                  },
                  "type": "Pressable",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#f8f8f8",
                  "borderTopColor": "#dedede",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "height": 45,
                  "justifyContent": "space-between",
                  "paddingHorizontal": 10,
                  "zIndex": 2,
                },
                "testID": "input_accessory_view",
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Please select an option.",
                        "value": "",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Eastern",
                        "value": "America/New_York",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Central",
                        "value": "America/Chicago",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Mountain",
                        "value": "America/Denver",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Pacific",
                        "value": "America/Los_Angeles",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Alaska",
                        "value": "America/Anchorage",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Hawaii",
                        "value": "Pacific/Honolulu",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Arizona",
                        "value": "America/Phoenix",
                      },
                      "type": "Picker.Item",
                    },
                  ],
                  "props": {
                    "onValueChange": [Function],
                    "selectedValue": "America/New_York",
                    "testID": "ios_picker",
                  },
                  "type": "Picker",
                },
              ],
              "props": {
                "style": [
                  {
                    "backgroundColor": "#d0d4da",
                    "justifyContent": "center",
                  },
                  {
                    "height": 215,
                  },
                ],
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "animationType": undefined,
            "onOrientationChange": [Function],
            "supportedOrientations": [
              "portrait",
              "landscape",
            ],
            "testID": "ios_modal",
            "transparent": true,
            "visible": false,
          },
          "type": "Modal",
        },
      ],
      "props": {
        "style": [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 40,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#9A9A9A",
          },
          false,
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TimezonePicker renders with short timezone labels 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Timezone",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "readOnly": true,
                    "style": {
                      "color": "#1C1C1C",
                    },
                    "testID": "text_input",
                    "value": "EDT",
                  },
                  "type": "TextInput",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "pointerEvents": "none",
                    },
                    "testID": "icon_container",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "pointerEvents": "box-only",
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "activeOpacity": 1,
            "onPress": [Function],
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 40,
              "width": "95%",
            },
            "testID": "ios_touchable_wrapper",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "aria-role": "button",
                "onPress": [Function],
                "style": {
                  "flex": 1,
                },
                "testID": "ios_modal_top",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flexDirection": "row",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "Done",
                          ],
                          "props": {
                            "allowFontScaling": false,
                            "style": [
                              {
                                "color": "#007aff",
                                "fontSize": 17,
                                "fontWeight": "600",
                                "paddingRight": 11,
                                "paddingTop": 1,
                              },
                              {},
                            ],
                            "testID": "done_text",
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {
                        "style": undefined,
                        "testID": "needed_for_touchable",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "hitSlop": {
                      "bottom": 4,
                      "left": 4,
                      "right": 4,
                      "top": 4,
                    },
                    "onPress": [Function],
                    "onPressIn": [Function],
                    "onPressOut": [Function],
                    "testID": "done_button",
                  },
                  "type": "Pressable",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#f8f8f8",
                  "borderTopColor": "#dedede",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "height": 45,
                  "justifyContent": "space-between",
                  "paddingHorizontal": 10,
                  "zIndex": 2,
                },
                "testID": "input_accessory_view",
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Please select an option.",
                        "value": "",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "EDT",
                        "value": "America/New_York",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "CDT",
                        "value": "America/Chicago",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "MDT",
                        "value": "America/Denver",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "PDT",
                        "value": "America/Los_Angeles",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "AKDT",
                        "value": "America/Anchorage",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "HST",
                        "value": "Pacific/Honolulu",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "AZ",
                        "value": "America/Phoenix",
                      },
                      "type": "Picker.Item",
                    },
                  ],
                  "props": {
                    "onValueChange": [Function],
                    "selectedValue": "America/New_York",
                    "testID": "ios_picker",
                  },
                  "type": "Picker",
                },
              ],
              "props": {
                "style": [
                  {
                    "backgroundColor": "#d0d4da",
                    "justifyContent": "center",
                  },
                  {
                    "height": 215,
                  },
                ],
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "animationType": undefined,
            "onOrientationChange": [Function],
            "supportedOrientations": [
              "portrait",
              "landscape",
            ],
            "testID": "ios_modal",
            "transparent": true,
            "visible": false,
          },
          "type": "Modal",
        },
      ],
      "props": {
        "style": [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 40,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#9A9A9A",
          },
          false,
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TimezonePicker calls onChange when timezone is selected 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        "Timezone",
      ],
      "props": {
        "style": {
          "color": "#1C1C1C",
          "fontSize": 14,
          "fontWeight": 600,
          "lineHeight": 22.4,
        },
      },
      "type": "Text",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "readOnly": true,
                    "style": {
                      "color": "#1C1C1C",
                    },
                    "testID": "text_input",
                    "value": "Eastern",
                  },
                  "type": "TextInput",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "pointerEvents": "none",
                    },
                    "testID": "icon_container",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "pointerEvents": "box-only",
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "activeOpacity": 1,
            "onPress": [Function],
            "style": {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "minHeight": 40,
              "width": "95%",
            },
            "testID": "ios_touchable_wrapper",
          },
          "type": "Pressable",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "aria-role": "button",
                "onPress": [Function],
                "style": {
                  "flex": 1,
                },
                "testID": "ios_modal_top",
              },
              "type": "Pressable",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": {
                      "flexDirection": "row",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            "Done",
                          ],
                          "props": {
                            "allowFontScaling": false,
                            "style": [
                              {
                                "color": "#007aff",
                                "fontSize": 17,
                                "fontWeight": "600",
                                "paddingRight": 11,
                                "paddingTop": 1,
                              },
                              {},
                            ],
                            "testID": "done_text",
                          },
                          "type": "Text",
                        },
                      ],
                      "props": {
                        "style": undefined,
                        "testID": "needed_for_touchable",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "hitSlop": {
                      "bottom": 4,
                      "left": 4,
                      "right": 4,
                      "top": 4,
                    },
                    "onPress": [Function],
                    "onPressIn": [Function],
                    "onPressOut": [Function],
                    "testID": "done_button",
                  },
                  "type": "Pressable",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "backgroundColor": "#f8f8f8",
                  "borderTopColor": "#dedede",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "height": 45,
                  "justifyContent": "space-between",
                  "paddingHorizontal": 10,
                  "zIndex": 2,
                },
                "testID": "input_accessory_view",
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Please select an option.",
                        "value": "",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Eastern",
                        "value": "America/New_York",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Central",
                        "value": "America/Chicago",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Mountain",
                        "value": "America/Denver",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Pacific",
                        "value": "America/Los_Angeles",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Alaska",
                        "value": "America/Anchorage",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Hawaii",
                        "value": "Pacific/Honolulu",
                      },
                      "type": "Picker.Item",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "color": undefined,
                        "label": "Arizona",
                        "value": "America/Phoenix",
                      },
                      "type": "Picker.Item",
                    },
                  ],
                  "props": {
                    "onValueChange": [Function],
                    "selectedValue": "America/New_York",
                    "testID": "ios_picker",
                  },
                  "type": "Picker",
                },
              ],
              "props": {
                "style": [
                  {
                    "backgroundColor": "#d0d4da",
                    "justifyContent": "center",
                  },
                  {
                    "height": 215,
                  },
                ],
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "animationType": undefined,
            "onOrientationChange": [Function],
            "supportedOrientations": [
              "portrait",
              "landscape",
            ],
            "testID": "ios_modal",
            "transparent": true,
            "visible": false,
          },
          "type": "Modal",
        },
      ],
      "props": {
        "style": [
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 40,
            "width": "100%",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#9A9A9A",
          },
          false,
        ],
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": undefined,
  },
  "type": "View",
}
`;
